--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                         <b>LIVROS</b>
                                     </strong>
                                 </h1>
-                                <p data-animation="fadeInLeft" data-delay="0.1s">Desenvolvento projectos de forma rápida e segura..</p>
+                                <p data-animation="fadeInLeft" data-delay="0.1s">Desenvolvimento projectos de forma rápida e segura..</p>
                                 <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.5s">Começar Agora. <i class="ti-arrow-right"></i></a>
                             </div>
                         </div>
